<resources>
    <string name="app_name">IMKB Hisse Senetleri ve Endeksler</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Detail</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hacme_g_re_100">IMKB- 100</string>
    <string name="hacme_g_re_50">IMKB - 50</string>
    <string name="hacme_g_re_30">IMKB - 30</string>
    <string name="dusenler">Düşenler</string>
    <string name="yukselenler">Yükselenler</string>
    <string name="hisse_ve_endeksler">Hisse ve Endeksler</string>
    <string name="ver_park">VERİPARK</string>
    <string name="imkb_hisse_senetleri_endeksler">IMKB Hisse Senetleri/Endeksler</string>
    <string name="imkb_hacme_gore">IMKB Hacme Göre</string>
    <string name="loading">Loading ...</string>
    <string name="bir_hata_olusut">Bir hata oluştu</string>
</resources>