<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stocks"
            android:title="@string/hisse_ve_endeksler" />
        <item
            android:id="@+id/nav_ascend"
            android:title="@string/yukselenler" />
        <item
            android:id="@+id/nav_descend"
            android:title="@string/dusenler" />
    </group>

    <item android:title="@string/imkb_hacme_gore">
        <menu>
            <item
                android:id="@+id/nav_volume30"
                android:title="@string/hacme_g_re_30" />
            <item
                android:id="@+id/nav_volume50"
                android:title="@string/hacme_g_re_50" />
            <item
                android:id="@+id/nav_volume100"
                android:title="@string/hacme_g_re_100" />
        </menu>
    </item>

</menu>